// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App click tweet 1`] = `
<div>
  <article>
    <div>
      NavBar
    </div>
    <h1>
      Tweries
    </h1>
    <form>
      <small
        class="App__small"
      >
        Start typing, to insert a break prior to reaching 280 characters please use
         
        <input
          class="App__linefeed"
          data-testid="linefeed"
          maxlength="4"
          placeholder=";;"
          size="4"
          value=";;"
        />
      </small>
      <textarea
        data-testid="source"
        placeholder="What's happening?"
        rows="8"
      >
        foo
      </textarea>
      <textarea
        data-testid="hashtags"
        placeholder="#hashtags"
        rows="1"
        type="text"
      >
        #bar
      </textarea>
      <ul
        data-testid="list"
      >
        <li>
          <textarea
            readonly=""
            rows="4"
          >
            foo #bar 1/1
          </textarea>
        </li>
      </ul>
      <button
        class="App__button"
        data-testid="tweet"
      >
        Tweet
      </button>
    </form>
    <div>
      Footer
    </div>
  </article>
</div>
`;

exports[`App loading 1`] = `
<div>
  <article>
    ...
  </article>
</div>
`;

exports[`App unauthenticated user 1`] = `
<div>
  <article>
    <div>
      NavBar
    </div>
    <h1>
      Tweries
    </h1>
    <form>
      <small
        class="App__small"
      >
        Start typing, to insert a break prior to reaching 280 characters please use
         
        <span>
          ;;
        </span>
      </small>
      <textarea
        data-testid="source"
        placeholder="What's happening?"
        rows="8"
      />
      <textarea
        data-testid="hashtags"
        placeholder="#hashtags"
        rows="1"
        type="text"
      />
      <ul
        data-testid="list"
      />
      <button
        class="App__button App__button--disabled"
        data-testid="tweet"
        disabled=""
      >
        Tweet
      </button>
    </form>
    <div>
      Footer
    </div>
  </article>
</div>
`;
